# arxiv_pipeline

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
collection_layer/: .env.sample  Dockerfile  arxiv_metadata.py
collection_layer/utils/: format_time.py  s3.py
create_index_with_mapping/: .env.sample  main.py
data_process_layer/: Dockerfile  arxiv_metadata.py  requirements.txt
data_process_layer/utils/: handle_authors.py  handle_categories.py  handle_versions.py  index_to_db.py  transform_metadata.py
lambda_layer/: README.md  requirements.txt
lambda_layer/python/: requirements.txt
pipeline_cdk/: pipeline_cdk_stack.py
tests/unit/: test_pipeline_cdk_stack.py
